--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Roboto Condensed', sans-serif; /* or your preferred font */
+  color: #161722; /* your global text color */
+}
+
+.slide-in{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    transform-origin: bottom;
+    background-color: #161722;
+}
+.slide-out{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    transform-origin: top;
+    background-color: #161722;
+}
