--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,23 @@ body {
     transform-origin: top;
     background-color: #161722;
 }
+
+/* scroll bar */
+/* Custom minimal scrollbar */
+/* Minimal custom scrollbar */
+.scrollbar-thin::-webkit-scrollbar {
+  width: 6px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: #6b7280; /* Tailwind gray-500 */
+  border-radius: 8px;
+}
+
+.scrollbar-thin:hover::-webkit-scrollbar-thumb {
+  background-color: #9ca3af; /* Tailwind gray-400 */
+}
